2.0.6.dev0
 * #1068: Fix a warning from LVM about leaked file descriptors.

2.0.5
 * #1033: Add a "password_transport" option to the MariaDB and MySQL database hooks for customizing
   how borgmatic transmits passwords to the database client.
 * #1078: Add "keep_3monthly" and "keep_13weekly" options for customizing "prune" action archive
   retention.
 * #1078: Add a "use_chunks_archive" option for controlling whether Borg uses its chunks cache
   directory.
 * #1078: For the "compact" action, pass "--dry-run" through to Borg.
 * #1085: Fix a regression in which the default monitoring verbosity is 0 (warnings only) instead of
   1 (info about steps borgmatic is taking). This prevented logs from showing up in monitoring
   services like Healthchecks unless you had an explicit monitoring verbosity set.
 * Move Mastodon social hosting from Fosstodon to FLOSS.social: https://floss.social/@borgmatic
 * The borgmatic project no longer accepts pull requests on GitHub. But see
   https://torsion.org/borgmatic/#contributing for how you can still submit pull requests. You can
   even use your GitHub account to login.

2.0.4
 * #1072: Fix path rewriting for non-root patterns in the ZFS, Btrfs, and LVM hooks.
 * #1073: Clarify the documentation about when an "after: error" command hook runs and how it
   differs from other hooks:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
 * #1075: Fix an incorrect warning about Borg placeholders being unsupported in a command hook.
 * #1080: If the exact same "everything" command hook is present in multiple configuration files,
   only run it once.

2.0.3
 * #1065: Fix a regression in monitoring hooks in which an error pinged the finish state instead of
   the fail state.
 * #1066: Add a "states" option to command hooks, so you can optionally skip an "after" hook if
   borgmatic encounters an error.
 * #1071: Fix an error in the LVM hook when removing a snapshot directory.

2.0.2